<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roomsbybuildingfloorCard"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_greenborder"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/room_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/roomsbybuildingfloorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbybuildingfloorDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorDepartmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/department_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbybuildingfloorDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorStandardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/standard_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbybuildingfloorStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorEmployeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/countEm_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbybuildingfloorEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbybuildingfloorTelephoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/telephone_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbybuildingfloorTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>