<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roomsbydepartmentCard"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_greenborder"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       <TextView
            android:id="@+id/roomsbydepartmentNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/room_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/roomsbydepartmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbydepartmentDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbydepartmentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbydepartmentStandardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/standard_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbydepartmentStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbydepartmentEmployeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/countEm_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbydepartmentEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/roomsbydepartmentTelephoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/telephone_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/roomsbydepartmentTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>