<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roomsbystandardCard"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_greenborder"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/roomsbystandardNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/room_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roomsbystandardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/roomsbystandardDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/roomsbystandardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/roomsbystandardDepartmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/department_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/roomsbystandardDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/roomsbystandardEmployeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/countEm_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/roomsbystandardEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#040404"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>